@@ -4,7 +4,6 @@ requires 'Carp'                      => '0';
 requires 'Data::Dumper'              => '0';
 requires 'DateTime::Format::RFC3339' => '0';
 requires 'Exporter'                  => '0';
-requires 'Math::BigInt'              => '>= 1.999718';
 requires 'Scalar::Util'              => '>= 1.14';
 
 recommends 'Types::Serialiser' => 0;
@@ -12,6 +11,7 @@ recommends 'Types::Serialiser' => 0;
 on test => sub{
   requires 'Data::Dumper'              => '0';
   requires 'DateTime::Format::RFC3339' => '0';
+  requires 'Math::BigInt'              => '>= 1.999718';
   requires 'TOML::Parser'              => '0';
   requires 'Test2::V0'                 => '0';
   requires 'Test::Pod'                 => '0';
